@@ -310,7 +310,7 @@ FolderTable.New.recentAndUnseenIcon=/org/javalobby/icons/20x20png/SmallRedCircle
 FolderTable.New.size=15
 FolderTable.Attachments.value=attachments
 FolderTable.Attachments.profileItems=Content-Type
-FolderTable.Attachments.icon=/org/javalobby/icons/20x20png/SmallPin.gif
+FolderTable.Attachments.icon=/net/suberic/pooka/gui/images/SmallPin.gif
 #FolderTable.Attachments.class=net.suberic.pooka.gui.AttachmentCellRenderer
 FolderTable.Attachments.size=10
 FolderTable.SentDate.value=Date
